force-app/main/default/objects/EquipmentLoanDetail__c/EquipmentLoanDetail__c.object-meta.xml
<CustomObject>
    <description>[CPLA] - Junction Object to relate an Equipment to an Account and the Ship To location when it is loaned.</description>
    <label>Equipment Loan Detail</label>
    <nameField>
        <displayFormat>Eq. Detail-{0000000}</displayFormat>
        <label>Equipment Loan Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Loans Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>