force-app/main/default/objects/EquipmentLoanDetail__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Commercial Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CommercialAccount</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EquipmentLoansDetails</relationshipLabel>
    <relationshipName>EquipmentLoansDetails</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>