force-app/main/default/objects/EquipmentLoanDetail__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This equipment is not active.</errorMessage>
        <filterItems>
            <field>Equipment__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipLabel>Equipment Loans (Customer)</relationshipLabel>
    <relationshipName>EquipmentLoansDetails</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>