force-app/main/default/objects/EquipmentLoanDetail__c/fields/LoanDate__c.field-meta.xml
<CustomField>
    <fullName>LoanDate__c</fullName>
    <label>Loan Date</label>
    <type>Date</type>
</CustomField>