force-app/main/default/objects/EquipmentLoanDetail__c/fields/StockCode__c.field-meta.xml
<CustomField>
    <fullName>StockCode__c</fullName>
    <label>Stock Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>